--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   data="/.netlify/functions/server"
   style="width:100%;height:100%;"
 >
+<head>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177741742-1"></script>
- <script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'UA-177741742-1');
- </script>
+</script>
+
+existing head code
+
+</head>
